terminate stylizzazioni testo e revisione padding

--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
                         <div class="ms_banner">
                             <img src="img/returnal-hero-banner-logo.png" >
                         </div>
-                        <h2>Rompi il cerchio</h2>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae doloribus laudantium vitae obcaecati ipsa error eum nemo facere, suscipit beatae tempore repellat expedita et saepe quaerat nulla voluptatum consectetur assumenda?</p>
+                        <h2 class="pb-4 display-3">Rompi il cerchio</h2>
+                        <p>Rialzati dopo ogni sconfitta e affronta una nuova sfida ogni rinascita in questo thriller fantascientifico, disponibile in esclusiava su PS5</p>
                         <a href="#">
                             <button type="button" class="ms_btn ms_btn-red">Acquista ora</button>
                         </a>
@@ -287,7 +287,7 @@
                         <div class="ms_banner">
                             <img src="img/it-takes-two-logo.png" >
                         </div>
-                        <h2>Un'Avventura cooperativa selvaggia ti attende</h2>
+                        <h2 class="pb-4 display-3">Un'Avventura cooperativa selvaggia ti attende</h2>
                         <p>Trova un amico e partite inseme per l'avventura più folle delle vostre vite in It Takes Two, un gioco d'avventura cooperativa a piattaforma che stravolge il suo genere.</p>
                         <a href="#">
                             <button type="button" class="ms_btn ms_btn-red">Acquista ora</button>
@@ -303,7 +303,7 @@
         <div class="container container-lg pt-4 pb-4">
             <h2>Nuove uscite</h2>
             <h4>Giochi incredibili per PS4 e PS5 disponibili ora</h4>
-            <div class="row">
+            <div class="row mb-4">
                 <div class="col-6 col-sm-4 col-lg-2">
                     <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg">
                     <h6>Tony Hawk's&trade; Pro Skater&trade; 1+2</h6>
@@ -329,7 +329,7 @@
                     <h6>Crash Bandicoot 4: It's About Time</h6>
                 </div>
             </div>
-            <div class="row">
+            <div class="row mb-4">
                 <div class="col-6 col-sm-4 col-lg-2">
                     <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg">
                     <h6>Tony Hawk's&trade; Pro Skater&trade; 1+2</h6>
@@ -363,26 +363,26 @@
         <div class="container container-lg">
             <div class="row mt-5">
                 <div class="col text-center">
-                    <h2>Esplora PlayStation&reg; 4</h2>
+                    <h2>Esplora PlayStation<sup class="ms_reg">&reg;</sup> 4</h2>
                     <h5>Giochi incredibili ed intrattenimento senza fine. <br> Non c'è mai stato un momento migliore per giocare sulla tua PS4</h5>
                 </div>
             </div>
             <div class="row mt-5 align-items-center">
                 <div class="col-12 col-md-4">
                     <img src="img/ps4-slim-homepage-image-block.jpg" alt="PS4">
-                    <h2>Console PlayStation 5</h2>
+                    <h2>PlayStation 4</h2>
                     <h5>Sperimenta la nuova generazione di incredibili giochi PlayStation.</h5>
                     <a href="#"><button type="button" class="ms_btn ms_btn-blue">Scopri di più</button></a>
                 </div>
                 <div class="col-12 col-md-4">
                     <img src="img/double11-202010-tw-psvr.jpg" alt="PS4">
-                    <h2>Console PlayStation 5</h2>
+                    <h2>PlayStation VR</h2>
                     <h5>Sperimenta la nuova generazione di incredibili giochi PlayStation.</h5>
                     <a href="#"><button type="button" class="ms_btn ms_btn-blue">Scopri di più</button></a>
                 </div>
                 <div class="col-12 col-md-4">
                     <img src="img/dualshock-4-listing-thumb.jpg" alt="PS4">
-                    <h2>Console PlayStation 5</h2>
+                    <h2>Accessori</h2>
                     <h5>Sperimenta la nuova generazione di incredibili giochi PlayStation.</h5>
                     <a href="#"><button type="button" class="ms_btn ms_btn-blue">Scopri di più</button></a>
                 </div>
@@ -394,7 +394,7 @@
     <section id="ps-plus" class="ms_sez-ps">
         <div class="container container-lg">
             <div class="row align-items-center">
-                <div class="col col-md-6">
+                <div class="col col-md-6 pb-3 pt-3">
                     <img src="img/ps-plus-logo.png" alt="ps-logo">
                     <p>Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online, giochi mensili, sconti esclusivi e altro ancora</p>
                     <a href="#"><button type="button" class="ms_btn ms_btn-grey">Esplora PlayStation Plus</button></a>
@@ -433,7 +433,7 @@
     <section id="ps-now" class="ms_sez-ps">
         <div class="container container-lg">
             <div class="row align-items-center">
-                <div class="col col-md-6">
+                <div class="col col-md-6 pb-3 pt-3">
                     <img src="img/ps-now-logo-two-column.png" alt="ps-now">
                     <p>Ottieni l'accesso immediato ad una vastissima raccolta di oltre 800 giochi per PS4, PS3 e PS2 su PS4 o PC Windows, con nuovi titoli aggoiuntivi ogni mese</p>
                     <a href="#"><button type="button" class="ms_btn ms_btn-light-grey">Esplora PlayStation Now</button></a>
